--- a/mega/assets/css/reset.css
+++ b/mega/assets/css/reset.css
@@ -72,3 +72,8 @@ img {
 .clearfix{*zoom:1;}
 .clearfix:before, .clearfix:after {display: block; content: ''; line-height: 0;}
 .clearfix::after {clear: both;}
+
+/* ir 효과 */
+.ir_pm {display:block; overflow:hidden; font-size:0; line-height:0; text-indent:-999} /* 의미있는 대체 텍스트를 제옥하는 경우 (Phark Method) */
+.ir_wa {display:block; overflow:hidden; position:releative; z-index:-1; width:100%; height: 100%;} /* 의미있는 이미지의 대체 텍스트로 이미지가 없어도 대체 텍스트를 보여주고자할때 */
+.ir_so {overflow: gidden; position:absolute; width:0; height:0; line-height:0; text-indent:-9999px;} /* 대체 텍스트가 아닌 접근성을 위한 숨긴 텍스트를 제공할 때 */
