--- a/mega/assets/css/style.css
+++ b/mega/assets/css/style.css
@@ -1,7 +1,9 @@
 @charset "utr-8";
 
 /* 레이아웃 */
+#mNav {display: none; position: absolute; top: 10px; right: 14px;}
 #header { width: 100%; border-bottom: 1px solid #c6c6c6; background: rgba(0,0,0,0);}
+#banner {position: relative;}
 
 /* 가운데 영역 */
 .container {
@@ -11,12 +13,30 @@
     font-family: 'Roboto', sans-serif;
 }
 
+/* 모바일 메뉴 */
+.ham { display: block; width: 25px; height: 20px; padding: 15px 10px 10px 10px;}
+.ham span {position: relative; display: block; width: 25px; height: 4px; background: #39106a;}
+.ham span:before {
+    content: '';
+    width: 25px;
+    height: 4px;
+    background: #39106a;
+    position: absolute;
+    left: 0; bottom: -7px;
+}
+.ham span::after {
+    content: '';
+    width: 25px;
+    height: 4px;
+    background: #39106a;
+    position: absolute;
+    left: 0; top: -7px;
+}
+
 /* 로우 영역 */
-.row { padding: 0 24px;}
+.row { padding: 0 28px;}
 
 /* 헤더 영역 */
-.header {}
-
 .header h1 {
     float: left;
 }
@@ -56,4 +76,146 @@
     font-size: 17px;
     font-weight: 700;
     color: #444;
+}
+
+/* 배너 */
+.banner_menu {
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    top: 20px;
+    width: 100%;
+    height: 100px;
+    z-index: 10;
+}
+.banner_menu a {
+    color: #fff;
+    font-size: 16px;
+    transition: all .3s;
+}
+.banner_menu a:hover {
+    color: #c1c1c1;
+}
+.banner_menu .bm_left {
+    float: left;
+}
+.banner_menu .bm_left ul {
+    padding: 10px;
+}
+.banner_menu .bm_left ul li {
+    display: inline;
+    margin-right: 30px;
+    position: relative;
+}
+.banner_menu .bm_left ul .total {
+    margin-right: 20px;
+}
+.banner_menu .bm_left ul .total a {
+    font-size: 14px;
+    padding: 3px 10px;
+    display: inline-block;
+    border: 1px solid #fff;
+    transition: all .3s;
+}
+.banner_menu .bm_left ul .total a:hover {
+    background: #fff;
+    color: #000;
+    border-color: #000;
+}
+
+.banner_menu .bm_right {
+    float: right;
+    overflow: hidden;
+}
+.banner_menu .bm_right ul {
+    float: left;
+}
+.banner_menu .bm_right ul:first-child {
+    padding-top: 10px;
+}
+.banner_menu .bm_right ul li {
+    display: inline;
+    text-align: center;
+    margin-right: 20px;
+    position: relative;
+}
+.banner_menu .bm_right ul li.line {
+    margin-right: 30px;
+}
+.banner_menu .bm_right ul li.white {
+    margin-right: 10px;
+
+}
+.banner_menu .bm_right ul li.white a {
+    width: 80px;
+    background-color: #fff;
+    color: #3a0e6a;
+    padding: 7px 30px 7px 30px;
+    border: 1px solid #fff;
+    display: inline-block;
+}
+.banner_menu .bm_right ul li.purple {
+    margin-right: 0;
+}
+.banner_menu .bm_right ul li.purple a {
+    width: 80px;
+    background-color: #3a0e6a;  
+    color: #fff;
+    padding: 7px 30px 7px 30px;
+    border: 1px solid #6e40c4;
+    display: inline-block;
+}
+.banner_menu ul li.line::after {
+    content: '';
+    width: 1px;
+    height: 14px;
+    background: #fff;
+    position: absolute;
+    right: -18px;
+    top: 2px;
+}
+
+/* 슬라이드 */
+.slider {width: 100%; height: 600px;}
+.slider .ss1 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
+.slider .ss2 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
+.slider .ss3 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
+
+
+/* 미디어 쿼리 */
+
+@media (max-width: 1290px) {
+    .container { width: 100%; }
+    .header .nav ul li { width: 93px; }
+    .header .nav ul li a { font-size: 15px; padding: 17px 10px;}
+    .header h1 em { padding: 11px 8px 5px 0;}
+    .header h1 strong { top: 9px; }
+}
+
+@media (max-width: 1024px) {
+    #mNav {display: block;}
+    .nav { display: none; }
+    .row {padding: 0 24px;}
+    .header h1 { float: none; text-align: center;}
+    .header h1 strong { left: 24px; }
+}
+
+@media (max-width: 960px) {
+    
+}
+
+@media (max-width: 768px) {
+    .row {padding: 0 8px;}
+    #mNav {right: 6px;}
+    .header h1 { text-align: left;}
+    .header h1 strong { display: none;}
+}
+
+@media (max-width: 480px) {
+    
+}
+
+
+@media (max-width: 320px) {
+    
 }
