--- a/site/CSS/testType04.css
+++ b/site/CSS/testType04.css
@@ -5,6 +5,8 @@ body {
 
 
 /* main */
+
+
 .menubar {
     background: #fff;
     margin: 0 auto;
@@ -12,35 +14,42 @@ body {
     font-size: 18px;
     font-weight: 600;
     position: relative;
+    z-index: 1;
+
 }
-.menubar .lg {
+.menubar h1.lg {
     width: 200px;
     height: 40px;
     background-image: url(../img/logo_whale.svg);
     background-repeat: no-repeat;
     background-position: center;
-    margin-left: 60px;
-    margin-top: 23px;
+    margin-right: 100px;
 }
 
 .menubar .menu {
+    width: 100%;
     background: #fff;
-    display: inline-block;
     display: flex;
+    justify-content: center;
+    align-items: center;
     line-height: 90px;
     position: absolute;
     position: fixed;
+    box-shadow: 0px 5px 10px 2px rgb(0 0 0 / 10%);
 }
-.menubar .menu > div:hover {
+.menubar .menu div:hover {
     color: #05d6b4;
     cursor: pointer;
 }
 
 
 .menubar .menu-bt {
+    display: inline-block;
     position: absolute;
     font-size: 18px;
+    font-weight: 600;
     color: #15C5AA;
+    background: #fff;
     border: 1px solid #15C5AA;
     border-radius: 5px;
     right: 4%;
@@ -223,9 +232,9 @@ body {
     content: "";
     width: 70px;
     height: 70px;
-    background-size: 100%;
+    clear: both;
     background: url(/site/img/icon_why_tab1_05.png);
-    background-position: center;
+    background-size: 100%;
 }
 
 .card .whaleon.sb h2:before {
@@ -317,4 +326,268 @@ body {
 
 .devivetype .device_txt:nth-child(2) {
     margin-right: 10px;
+}
+
+/* 하단버튼 */
+
+.bottom-dw {
+    text-align: center;
+    padding: 10% 0;
+}
+
+.bottom-dw img {
+    display: inline-block;
+    margin-bottom: 3%;
+    max-width: 560px;
+}
+
+.bottom-dw button {
+    font-size: 30px;
+    background: #05d6b4;
+    color: #fff;
+    width: 250px;
+    text-align: center;
+    border-radius: 45px;
+    height: 77px;
+    line-height: 77px;
+    border-style: none;
+}
+
+.bottom-dw button::after {
+    background-image: url(/site/img/icon_btn_arrow.png);
+    background-repeat: no-repeat;
+    content: "";
+    display: inline-block;
+    width: 30px;
+    height: 77px;
+    background-size: 100%;
+    margin-left: 18px;
+    margin-top: 23px;
+    vertical-align: top
+}
+
+/*footer*/
+footer {
+    width: 100%;
+    text-align: center;
+    background-color: #f9f9f9;
+    padding: 50px 0;
+}
+
+footer .footer-img {
+    max-width: 1200px;
+    margin: 0 auto;
+    position: relative;
+}
+
+footer img {
+    display: inline-block;
+    margin: 0 0 20px;
+    max-width: 141px;
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+footer ul li {
+    max-width: 1280px;
+    height: 18px;
+    line-height: 18px;
+    display: inline-block;
+    padding-right: 10px;
+    padding-left: 10px;
+    font-size: 16px;
+    color: #c0c0c0;
+    font-weight: 400;
+    border-right: 1px solid #dddddd;
+    cursor: pointer;
+}
+
+.footer-img ul li:last-child {
+    border: 0;
+}
+
+.footer-img .go_beta {
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    text-align: center;
+    border: 1px solid #c0c0c0;
+    border-radius: 5px;
+}
+
+.footer-img .go_beta a {
+    position: relative;
+    padding: 0 15px 0 45px;
+    height: 43px;
+    color: #c0c0c0;
+    font-size: 16px;
+    line-height: 43px;
+    cursor: pointer;
+}
+
+.footer-img .go_beta a::before {
+    display: inline-block;
+    background: url(../img/beta.svg);
+    content: "";
+    position: absolute;
+    top: calc(50% - 10px);
+    left: calc(50% - 55px);
+    width: 20px;
+    height: 20px;
+}
+
+
+
+
+@media (max-width: 2300px){
+    .menubar .menu-bt {
+        right: 10%;
+    }
+}
+
+@media (max-width: 2200px){
+    .menubar .menu-bt {
+        right: 10%;
+    }
+}
+
+@media (max-width: 1900px){
+    .menubar h1.lg {
+        width: 10%;
+        height: 40px;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-right: 50px;
+    }
+    .menu > div {
+        margin-right: 40px;
+        text-align: center;
+        color: #2d1d1d;
+        font-weight: 800;
+    }
+    .menubar .menu-bt {
+        right: 10%;
+    }
+}
+
+
+
+
+@media (max-width: 1300px){
+    .menubar h1.lg {
+        width: 15%;
+        background-image: url(../img/logo_whale.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-left: 20px;
+    }
+    .menubar .menu {
+        width: 100%;
+        background: #fff;
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        line-height: 90px;
+        position: absolute;
+        position: fixed;
+        box-shadow: 0px 5px 10px 2px rgb(0 0 0 / 10%);
+    }
+    .menubar .menu {
+        height: 90px;
+    }
+
+    .menubar .menu > div {
+        display: none;
+    }
+    .banner .banner-img {
+        max-width: 800px;
+        display: table;
+        margin: 0 auto;
+        width: 100%;
+        height: 500px;
+    }
+    .card-img {
+        position: absolute;
+        width: 60%;
+        margin: 0 20%;
+        top: 60%;
+    }
+    .whaleon h2 {
+        font-size: 30px;
+        line-height: 1.5em;
+    }
+    .whaleon p {
+        font-size: 20px;
+    }
+    .whaleon h2:before {
+        width: 50px;
+        height: 50px;
+        background: url(/site/img/icon_why_tab1_05.png);
+        background-size: 100%;
+    }
+    .card .whaleon.sb h2:before {
+        width: 50px;
+        height: 50px;
+        background-size: 100%;
+    }
+    
+    .card .whaleon.qk h2:before {
+        width: 50px;
+        height: 50px;
+        background-size: 100%;
+    }
+    
+    .card .whaleon.tap h2:before {
+        width: 50px;
+        height: 50px;
+        background-size: 100%;
+    }
+    
+    .card .whaleon.pt h2:before {
+        width: 50px;
+        height: 50px;
+        background-size: 100%;
+    }
+    .card {
+        width: 100%;
+        height: 700px;
+    }
+    .devivetype {
+        margin-top: 0;
+    }
+    .footer-img .go_beta {
+        position: relative;
+        top: inherit;
+        right: inherit;
+        margin: 30px 0 0;
+    }
+}
+
+@media (max-width: 900px){
+    .banner .banner-img {
+        max-width: 800px;
+        display: table;
+        margin: 0 auto;
+        width: 100%;
+        height: 500px;
+    }
+    .whaleon {
+        display: table-cell;
+        padding-top: 80px;
+        padding-left: 30px;
+        display: block;
+    }
+    .banner {
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+        display: table;
+    }
+    .banner.top1 {
+        background-image: url(/site/img/top_tasking_bg.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 70%;
+    }
 }
