--- a/site/CSS/testType04.css
+++ b/site/CSS/testType04.css
@@ -125,7 +125,7 @@ body {
 
 /* 상단 배너 */
 .banner.top1 {
-    background-image: url(/site/img/top_tasking_bg.jpg);
+    background-image: url(../img/top_tasking_bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -176,7 +176,7 @@ body {
     line-height: 77px;
 }
 .banner-tite > div::after {
-    background-image: url(/site/img/icon_btn_arrow.png);
+    background-image: url(../img/icon_btn_arrow.png);
     background-repeat: no-repeat;
     content: "";
     display: inline-block;
@@ -233,24 +233,24 @@ body {
     width: 70px;
     height: 70px;
     clear: both;
-    background: url(/site/img/icon_why_tab1_05.png);
+    background: url(../img/icon_why_tab1_05.png);
     background-size: 100%;
 }
 
 .card .whaleon.sb h2:before {
-    background: url(/site/img/icon_why_tab1_01.png);
+    background: url(../img/icon_why_tab1_01.png);
 }
 
 .card .whaleon.qk h2:before {
-    background: url(/site/img/icon_why_tab1_02.png);
+    background: url(../img/icon_why_tab1_02.png);
 }
 
 .card .whaleon.tap h2:before {
-    background: url(/site/img/icon_why_tab1_03.png);
+    background: url(../img/icon_why_tab1_03.png);
 }
 
 .card .whaleon.pt h2:before {
-    background: url(/site/img/icon_why_tab1_04.png);
+    background: url(../img/icon_why_tab1_04.png);
 }
 
 .whaleon p {
@@ -279,7 +279,7 @@ body {
     content: "";
     width: 20px;
     height: 20px;
-    background: url(/site/img/icon_function_detailgo.png);
+    background: url(../img/icon_function_detailgo.png);
 }
 
 .devivetype {
@@ -354,7 +354,7 @@ body {
 }
 
 .bottom-dw button::after {
-    background-image: url(/site/img/icon_btn_arrow.png);
+    background-image: url(../img/icon_btn_arrow.png);
     background-repeat: no-repeat;
     content: "";
     display: inline-block;
@@ -523,7 +523,6 @@ footer ul li {
     .whaleon h2:before {
         width: 50px;
         height: 50px;
-        background: url(/site/img/icon_why_tab1_05.png);
         background-size: 100%;
     }
     .card .whaleon.sb h2:before {
