--- a/mega/assets/css/style.css
+++ b/mega/assets/css/style.css
@@ -2,7 +2,7 @@
 
 /* 레이아웃 */
 #mNav {display: none; position: absolute; top: 10px; right: 14px;}
-#header { width: 100%; border-bottom: 1px solid #c6c6c6; background: rgba(0,0,0,0);}
+#header { width: 100%; border-bottom: 1px solid #c6c6c6; background: #fff;}
 #banner {position: relative;}
 
 /* 가운데 영역 */
@@ -180,7 +180,41 @@
 .slider .ss1 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
 .slider .ss2 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
 .slider .ss3 {background: url(../img/swiper01.jpg) no-repeat center center; background-size: cover;}
+.swiper-slide {}
+.swiper-slide h2 { position: relative; display: inline-block; font-size: 60px; line-height: 70px; color: #fff; margin-top: 200px;}
+.swiper-slide h2::after { content: ''; width: 100%; height: 1px; background: rgba(255,255,255,0.3); position: absolute; left: 0; bottom: -35px;}
+.swiper-slide h2 em {display: block; font-size: 59px; font-weight: 100;}
+.swiper-slide p { font-size: 27px; color: #fff; padding-top: 55px;}
 
+/* 무비 */
+.movie { padding: 100px 0;}
+.movie_title {margin-bottom: 60px;}
+.movie_title ul {overflow: hidden; width: 848px; margin: 0 auto;}
+.movie_title li { float: left; width: 210px; text-align: center; border: 1px solid #c4c4c4; margin-right: -1px;}
+.movie_title li a { display: block; padding: 15px 0; font-size: 18px; color: #666; font-weight: 700;}
+.movie_title li.active a { background: #666; color: #fff; }
+.movie_chart {overflow: hidden; height: 592px;}
+.movie_chart > div > div > div {float: left; width: 292px; margin-right: 18px;}
+.movie_chart > div > div > div:last-child {margin-right: 0;}
+.movie_chart > div > div > div .poster { position: relative;}
+.movie_chart > div > div > div .poster img { display: block;}
+.movie_chart > div > div > div .poster .rank { position: absolute; top: 17px; left: 0; font-size: 22px; box-shadow: 3px 3px 8px rgba(0,0,0,0.5); width: 50px; height: 50px; line-height: 50px; background-color: #38116a; text-align: center;}
+.movie_chart > div > div > div .poster .rank strong { color: #fff; text-shadow: 2px 2px 3px rgba(0,0,0,0.5);}
+.movie_chart > div > div > div .poster .mx { position: absolute; top: 17px; right: 17px;}
+.movie_chart > div > div > div .poster .mx span {width: 103px; height: 25px; display: block;}
+.movie_chart > div > div > div .poster .mx .m {background-position: 0 -75px;}
+.movie_chart > div > div > div .poster .mx .b {background-position: 0 -100px;}
+.movie_chart > div > div > div .infor { background: #fff; padding: 17px; border: 1px solid #d9d9d9;}
+.movie_chart > div > div > div .infor h3 { color: #333; font-size: 30px; font-weight: 700; margin-bottom: 20px;}
+.movie_chart > div > div > div .infor h3 strong {}
+.movie_chart > div > div > div .infor h3 span {width: 29px; height: 29px; display: inline-block; margin-top: 9px; vertical-align: -2px;}
+.movie_chart > div > div > div .infor h3 span.all {background-position: -87px -125px;}
+.movie_chart > div > div > div .infor h3 span.a12 {background-position: -58px -125px;}
+.movie_chart > div > div > div .infor h3 span.a15 {background-position: 0px -125px;}
+.movie_chart > div > div > div .infor h3 span.a19 {background-position: -29px -125px;}
+.movie_chart > div > div > div .infor .infor_btn { overflow: hidden;}
+.movie_chart > div > div > div .infor .infor_btn a {float: left; width: 49.5%; margin-right: 1%; text-align: center; background: #f2f2f2; font-size: 18px; padding: 15px 0; box-sizing: border-box;}
+.movie_chart > div > div > div .infor .infor_btn a:last-child { margin-right: 0;}
 
 /* 미디어 쿼리 */
 
@@ -190,6 +224,8 @@
     .header .nav ul li a { font-size: 15px; padding: 17px 10px;}
     .header h1 em { padding: 11px 8px 5px 0;}
     .header h1 strong { top: 9px; }
+
+    .swiper-button-prev, .swiper-button-next { display: none;}
 }
 
 @media (max-width: 1024px) {
@@ -198,24 +234,76 @@
     .row {padding: 0 24px;}
     .header h1 { float: none; text-align: center;}
     .header h1 strong { left: 24px; }
+    .banner_menu .bm_left ul { display: none; }
+    .banner_menu .bm_right ul:first-child { display: none; }
 }
 
 @media (max-width: 960px) {
-    
+    .slider { height: 500px; }
+    .swiper-slide h2 { margin-top: 170px; font-size: 37px; line-height: 45px;}
+    .swiper-slide h2::after { bottom: -15px; }
+    .swiper-slide h2 em { font-size: 34px; }
+    .swiper-slide p { font-size: 16px; padding-top: 35px; }
+
+    .movie_title ul { width: auto;}
+    .movie_title li { width: 25%; box-sizing: border-box;}
+
 }
 
 @media (max-width: 768px) {
+    body { background: #d9d7e0;}
     .row {padding: 0 8px;}
     #mNav {right: 6px;}
     .header h1 { text-align: left;}
     .header h1 strong { display: none;}
+
+    #movie .ir_so {position: static; width: auto; height: auto; line-height: normal; text-indent: 0; font-size: 24px; font-weight: bold; padding-bottom: 20px;}
+    #movie .row { background: #fff; margin: 24px; padding: 24px;}
+    .movie {padding: 0;}
+    .movie_title {}
+    .movie_title ul {position: relative; padding-bottom: 10px;}
+    .movie_title ul:before {content: ''; position: absolute; z-index: 1; left: 0; bottom: 0; width: 100%; height: 2px; background: #e1e1e1;}
+    .movie_title li { width: auto; border: 0;}
+    .movie_title li a { position: relative; font-size: 18px; color: #666; font-weight: 400; padding: 0; margin-right: 35px;}
+    .movie_title li.active a:before {content: ''; position: absolute; z-index: 2; left: 0; bottom: -10px; width: 100%; height: 2px; background: #666;}
+    .movie_title li.active a {background: none; color: #666;}
 }
+
+@media (max-width: 600px) {
+    .slider { height: 400px; }
+    .swiper-slide h2 { margin-top: 140px; font-size: 24px; line-height: 30px;}
+    .swiper-slide h2::after { bottom: -5px; }
+    .swiper-slide h2 em { font-size: 20px; }
+    .swiper-slide p { font-size: 14px; padding-top: 25px; }
+
+    .banner_menu { top: 16px; }
+    .banner_menu .bm_right ul li.white a { font-size: 14px; padding: 3px 5px 5px 5px; color: #fff; background: rgba(0,0,0,0.6); border-color: #fff;}
+    .banner_menu .bm_right ul li.purple a { font-size: 14px; padding: 3px 5px 5px 5px; color: #fff; background: rgba(0,0,0,0.6); border-color: #fff;}
+    .swiper-pagination-bullet { width: 13px !important; height: 13px !important;}
+
+    #movie .container {}
+    #movie .container:after {content: ''; position: absolute; z-index: 20; top: 0; right: 0; width: 8px; height: 100%; background: #d9d7e0;}
+    #movie .row {position: relative; margin: 8px; padding: 16px; margin-right: 0; padding-right: 0;}
+    #movie .row:after {content: ''; position: absolute; top: 0; right: 0; z-index: 10; width: 24px; height: 100%; background-color: #fff;}
+    #movie .ir_so {font-size: 18px; padding-bottom: 10px;}
+    .movie_title {margin-bottom: 20px;}
+    .movie_title ul {padding-bottom: 8px; white-space: nowrap; overflow-x: auto;}
+    .movie_title li a {font-size: 14px; margin-right: 15px;}
+    .movie_title li.active a:before {bottom: -8px;}
+    .movie_chart {position: relative; z-index: 20;}
+    .movie_chart > div > div > div .infor h3 {text-align: center; margin: 5px 0 10px;}
+    .movie_chart > div > div > div .infor h3 strong {display: block; font-size: 19px; color: #222; font-weight: 300;}
+    .movie_chart > div > div > div .infor h3 span {display: none;}
+    .movie_chart > div > div > div .infor .infor_btn a {width: 52%; margin-left: 24%; background: #fff; display: block; margin-right: 0; padding: 5px; color: #777; margin-bottom: 5px; box-sizing: border-box; font-size: 14px; border: 1px solid #ddd;}
+    .movie_chart > div > div > div .infor .infor_btn a:last-child {display: none;}
+}
+
 
 @media (max-width: 480px) {
     
 }
 
-
 @media (max-width: 320px) {
-    
+    .movie_title li a { margin-right: 9px;}
 }
+
