--- a/mega/assets/css/swiper.css
+++ b/mega/assets/css/swiper.css
@@ -66,7 +66,18 @@
     left: 0; top: 0; 
     width: 100%; height: 100%; 
     background: #000; 
-    opacity: .2;
+    opacity: .1;
+}
+
+.swiper-slide .container2 {z-index: 20;}
+.swiper-slide:after {
+    content: ''; 
+    position: absolute; 
+    z-index: 2; 
+    left: 0; top: 0; 
+    width: 100%; height: 100%; 
+    background: #000; 
+    opacity: 0;
 }
 .swiper-container2 .swiper-slide:after {
     opacity: 0;
