--- a/site/CSS/textType06.css
+++ b/site/CSS/textType06.css
@@ -83,7 +83,7 @@ ul,li,a {
     color: #9b9b9b;
 }
 .main_bord .bord_tite .tite_n.show {
-    color: #9b9b9b;
+    color: #000;
 }
 .main_bord .bord_tite span {
     font-size: 15px;
