--- a/project/assets/css/reset.css
+++ b/project/assets/css/reset.css
@@ -47,7 +47,8 @@ textarea {
   font-size: 14px;
   line-height: 1.5;
   color: #222;
-  font-family: var(--fontNexon1M),AppleSDGothicNeo-Regular, 'Malgun Gothic', '맑은 고딕', dotum, '돋움', sans-serif;
+  font-family: 'S-CoreDream',AppleSDGothicNeo-Regular, 'Malgun Gothic', '맑은 고딕', dotum, '돋움', sans-serif;
+  font-weight: 400;
 }
 
 /* 링크 초기화 */
@@ -77,3 +78,34 @@ img {
 
 /* 버튼 초기화 */
 button {border: 0;}
+
+
+/* IR 효과 */
+.ir_pm {
+  display: block;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  text-indent: -9999px;
+}
+/* 의미있는 이미지의 대체 텍스트를 제공하는 경우(Phark Method) */
+
+.ir_wa {
+  display: block;
+  overflow: hidden;
+  position: relative;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+/* 의미있는 이미지의 대체 텍스트로 이미지가 없어도 대체 텍스트를 보여주고자 할 때(WA IR) */
+
+.ir_so {
+  overflow: hidden;
+  position: absolute;
+  width: 0;
+  height: 0;
+  line-height: 0;
+  text-indent: -9999px;
+}
+/* 대체 텍스트가 아닌 접근성을 위한 숨김 텍스트를 제공할 때 */
