--- a/project/assets/css/common.css
+++ b/project/assets/css/common.css
@@ -22,6 +22,13 @@ body {
     }
 }
 
+@media (max-width: 1000px) {
+    .container {
+        width: 100%;
+        margin: 0 auto;
+    }
+}
+
 @media (max-width: 800px) {
     .container {
         width: 100%;
